[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pymls_sm"
version = "0.0.1"
authors = [
  { name="Solmon", email="soloemoon@gmail.com" },
]
description = "Download MLS statistics and perform analytics"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/soloemoon/pymls"
"Bug Tracker" = "https://github.com/soloemoon/pymls/issues"